@@ -11,8 +11,10 @@ import org.prebid.server.auction.InterstitialProcessor;
 import org.prebid.server.auction.OrtbTypesResolver;
 import org.prebid.server.auction.PrivacyEnforcementService;
 import org.prebid.server.auction.StoredRequestProcessor;
-import org.prebid.server.auction.TimeoutResolver;
+import org.prebid.server.auction.gpp.AuctionGppService;
 import org.prebid.server.auction.model.AuctionContext;
+import org.prebid.server.auction.model.AuctionStoredResult;
+import org.prebid.server.auction.versionconverter.BidRequestOrtbVersionConversionManager;
 import org.prebid.server.exception.InvalidRequestException;
 import org.prebid.server.json.JacksonMapper;
 import org.prebid.server.metric.MetricName;
@@ -32,11 +34,12 @@ public class AuctionRequestFactory {
     private final long maxRequestSize;
     private final Ortb2RequestFactory ortb2RequestFactory;
     private final StoredRequestProcessor storedRequestProcessor;
+    private final BidRequestOrtbVersionConversionManager ortbVersionConversionManager;
+    private final AuctionGppService gppProcessor;
     private final ImplicitParametersExtractor paramsExtractor;
     private final Ortb2ImplicitParametersResolver paramsResolver;
     private final InterstitialProcessor interstitialProcessor;
     private final PrivacyEnforcementService privacyEnforcementService;
-    private final TimeoutResolver timeoutResolver;
     private final DebugResolver debugResolver;
     private final JacksonMapper mapper;
     private final OrtbTypesResolver ortbTypesResolver;
@@ -46,24 +49,26 @@ public class AuctionRequestFactory {
     public AuctionRequestFactory(long maxRequestSize,
                                  Ortb2RequestFactory ortb2RequestFactory,
                                  StoredRequestProcessor storedRequestProcessor,
+                                 BidRequestOrtbVersionConversionManager ortbVersionConversionManager,
+                                 AuctionGppService gppProcessor,
                                  ImplicitParametersExtractor paramsExtractor,
                                  Ortb2ImplicitParametersResolver paramsResolver,
                                  InterstitialProcessor interstitialProcessor,
                                  OrtbTypesResolver ortbTypesResolver,
                                  PrivacyEnforcementService privacyEnforcementService,
-                                 TimeoutResolver timeoutResolver,
                                  DebugResolver debugResolver,
                                  JacksonMapper mapper) {
 
         this.maxRequestSize = maxRequestSize;
         this.ortb2RequestFactory = Objects.requireNonNull(ortb2RequestFactory);
         this.storedRequestProcessor = Objects.requireNonNull(storedRequestProcessor);
+        this.ortbVersionConversionManager = Objects.requireNonNull(ortbVersionConversionManager);
+        this.gppProcessor = Objects.requireNonNull(gppProcessor);
         this.paramsExtractor = Objects.requireNonNull(paramsExtractor);
         this.paramsResolver = Objects.requireNonNull(paramsResolver);
         this.interstitialProcessor = Objects.requireNonNull(interstitialProcessor);
         this.ortbTypesResolver = Objects.requireNonNull(ortbTypesResolver);
         this.privacyEnforcementService = Objects.requireNonNull(privacyEnforcementService);
-        this.timeoutResolver = Objects.requireNonNull(timeoutResolver);
         this.debugResolver = Objects.requireNonNull(debugResolver);
         this.mapper = Objects.requireNonNull(mapper);
     }
@@ -84,6 +89,7 @@ public class AuctionRequestFactory {
 
         return ortb2RequestFactory.executeEntrypointHooks(routingContext, body, initialAuctionContext)
                 .compose(httpRequest -> parseBidRequest(httpRequest, initialAuctionContext.getPrebidErrors())
+
                         .map(bidRequest -> ortb2RequestFactory
                                 .enrichAuctionContext(initialAuctionContext, httpRequest, bidRequest, startTime)
                                 .with(requestTypeMetric(bidRequest))))
@@ -108,7 +114,11 @@ public class AuctionRequestFactory {
                 .compose(auctionContext -> ortb2RequestFactory.executeProcessedAuctionRequestHooks(auctionContext)
                         .map(auctionContext::with))
 
-                .compose(ortb2RequestFactory::populateDealsInfo)
+                .compose(ortb2RequestFactory::populateUserAdditionalInfo)
+
+                .map(ortb2RequestFactory::enrichWithPriceFloors)
+
+                .map(auctionContext -> ortb2RequestFactory.updateTimeout(auctionContext, startTime))
 
                 .recover(ortb2RequestFactory::restoreResultFromRejection);
     }
@@ -120,8 +130,7 @@ public class AuctionRequestFactory {
         }
 
         if (body.length() > maxRequestSize) {
-            throw new InvalidRequestException(
-                    String.format("Request size exceeded max size of %d bytes.", maxRequestSize));
+            throw new InvalidRequestException("Request size exceeded max size of %d bytes.".formatted(maxRequestSize));
         }
 
         return body;
@@ -144,7 +153,7 @@ public class AuctionRequestFactory {
         try {
             return mapper.mapper().readTree(body);
         } catch (IOException e) {
-            throw new InvalidRequestException(String.format("Error decoding bidRequest: %s", e.getMessage()));
+            throw new InvalidRequestException("Error decoding bidRequest: " + e.getMessage());
         }
     }
 
@@ -152,7 +161,7 @@ public class AuctionRequestFactory {
         try {
             return mapper.mapper().treeToValue(bidRequestNode, BidRequest.class);
         } catch (JsonProcessingException e) {
-            throw new InvalidRequestException(String.format("Error decoding bidRequest: %s", e.getMessage()));
+            throw new InvalidRequestException("Error decoding bidRequest: " + e.getMessage());
         }
     }
 
@@ -162,17 +171,24 @@ public class AuctionRequestFactory {
      */
     private Future<BidRequest> updateAndValidateBidRequest(AuctionContext auctionContext) {
         final Account account = auctionContext.getAccount();
-        final BidRequest bidRequest = auctionContext.getBidRequest();
-        final HttpRequestContext httpRequest = auctionContext.getHttpRequest();
+        final List<String> debugWarnings = auctionContext.getDebugWarnings();
 
-        return storedRequestProcessor.processStoredRequests(account.getId(), bidRequest)
-                .map(resolvedBidRequest ->
-                        paramsResolver.resolve(resolvedBidRequest, httpRequest, timeoutResolver, ENDPOINT))
-
-                .compose(resolvedBidRequest ->
-                        ortb2RequestFactory.validateRequest(resolvedBidRequest, auctionContext.getDebugWarnings()))
-
+        return storedRequestProcessor.processAuctionRequest(account.getId(), auctionContext.getBidRequest())
+                .compose(auctionStoredResult -> updateBidRequest(auctionStoredResult, auctionContext))
+                .compose(bidRequest -> ortb2RequestFactory.validateRequest(bidRequest, debugWarnings))
                 .map(interstitialProcessor::process);
+    }
+
+    private Future<BidRequest> updateBidRequest(AuctionStoredResult auctionStoredResult,
+                                                AuctionContext auctionContext) {
+
+        final boolean hasStoredBidRequest = auctionStoredResult.hasStoredBidRequest();
+
+        return Future.succeededFuture(auctionStoredResult.bidRequest())
+                .map(ortbVersionConversionManager::convertToAuctionSupportedVersion)
+                .map(bidRequest -> gppProcessor.apply(bidRequest, auctionContext))
+                .map(bidRequest -> paramsResolver.resolve(
+                        bidRequest, auctionContext.getHttpRequest(), ENDPOINT, hasStoredBidRequest));
     }
 
     private static MetricName requestTypeMetric(BidRequest bidRequest) {
