@@ -14,8 +14,8 @@ import org.apache.commons.collections4.CollectionUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.prebid.server.bidder.Bidder;
 import org.prebid.server.bidder.model.BidderBid;
+import org.prebid.server.bidder.model.BidderCall;
 import org.prebid.server.bidder.model.BidderError;
-import org.prebid.server.bidder.model.HttpCall;
 import org.prebid.server.bidder.model.HttpRequest;
 import org.prebid.server.bidder.model.Result;
 import org.prebid.server.currency.CurrencyConversionService;
@@ -34,7 +34,6 @@ import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 public class ImpactifyBidder implements Bidder<BidRequest> {
 
@@ -96,9 +95,8 @@ public class ImpactifyBidder implements Bidder<BidRequest> {
             return currencyConversionService
                     .convertCurrency(bidFloor, bidRequest, bidFloorCur, BIDDER_CURRENCY);
         } catch (PreBidException e) {
-            throw new PreBidException(String.format(
-                    "Unable to convert provided bid floor currency from %s to %s for imp `%s`",
-                    bidFloorCur, BIDDER_CURRENCY, impId));
+            throw new PreBidException("Unable to convert provided bid floor currency from %s to %s for imp `%s`"
+                    .formatted(bidFloorCur, BIDDER_CURRENCY, impId));
         }
     }
 
@@ -117,7 +115,7 @@ public class ImpactifyBidder implements Bidder<BidRequest> {
                     .convertValue(imp.getExt(), IMPACTIFY_EXT_TYPE_REFERENCE)
                     .getBidder();
         } catch (IllegalArgumentException e) {
-            throw new PreBidException(String.format("Unable to decode the impression ext for id: %s", imp.getId()));
+            throw new PreBidException("Unable to decode the impression ext for id: " + imp.getId());
         }
     }
 
@@ -158,7 +156,7 @@ public class ImpactifyBidder implements Bidder<BidRequest> {
     }
 
     @Override
-    public Result<List<BidderBid>> makeBids(HttpCall<BidRequest> httpCall, BidRequest bidRequest) {
+    public Result<List<BidderBid>> makeBids(BidderCall<BidRequest> httpCall, BidRequest bidRequest) {
         try {
             final List<BidderError> errors = new ArrayList<>();
             final BidResponse bidResponse = mapper.decodeValue(httpCall.getResponse().getBody(), BidResponse.class);
@@ -181,7 +179,7 @@ public class ImpactifyBidder implements Bidder<BidRequest> {
                 .map(SeatBid::getBid)
                 .flatMap(Collection::stream)
                 .map(bid -> BidderBid.of(bid, getBidType(bid.getImpid(), bidRequest.getImp()), bidResponse.getCur()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private static BidType getBidType(String impId, List<Imp> imps) {
@@ -195,7 +193,6 @@ public class ImpactifyBidder implements Bidder<BidRequest> {
                 }
             }
         }
-        throw new PreBidException(
-                String.format("Failed to find a supported media type impression with ID: '%s'", impId));
+        throw new PreBidException("Failed to find a supported media type impression with ID: '%s'".formatted(impId));
     }
 }
