@@ -18,8 +18,8 @@ import org.apache.commons.collections4.CollectionUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.prebid.server.bidder.Bidder;
 import org.prebid.server.bidder.model.BidderBid;
+import org.prebid.server.bidder.model.BidderCall;
 import org.prebid.server.bidder.model.BidderError;
-import org.prebid.server.bidder.model.HttpCall;
 import org.prebid.server.bidder.model.HttpRequest;
 import org.prebid.server.bidder.model.Result;
 import org.prebid.server.exception.PreBidException;
@@ -125,7 +125,7 @@ public class OperaadsBidder implements Bidder<BidRequest> {
     }
 
     private static String buildImpId(String originalId, BidType type) {
-        return String.format("%s:opa:%s", originalId, type.getName());
+        return "%s:opa:%s".formatted(originalId, type.getName());
     }
 
     private static Banner modifyBanner(Banner banner) {
@@ -191,7 +191,7 @@ public class OperaadsBidder implements Bidder<BidRequest> {
     }
 
     @Override
-    public Result<List<BidderBid>> makeBids(HttpCall<BidRequest> httpCall, BidRequest bidRequest) {
+    public Result<List<BidderBid>> makeBids(BidderCall<BidRequest> httpCall, BidRequest bidRequest) {
         try {
             final BidResponse bidResponse = mapper.decodeValue(httpCall.getResponse().getBody(), BidResponse.class);
             return Result.withValues(extractBids(bidResponse));
@@ -212,7 +212,7 @@ public class OperaadsBidder implements Bidder<BidRequest> {
                 .flatMap(Collection::stream)
                 .filter(OperaadsBidder::isValidBid)
                 .map(this::createBidderBid)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private static boolean isValidBid(Bid bid) {
