@@ -19,8 +19,8 @@ import org.apache.commons.lang3.ObjectUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.prebid.server.bidder.Bidder;
 import org.prebid.server.bidder.model.BidderBid;
+import org.prebid.server.bidder.model.BidderCall;
 import org.prebid.server.bidder.model.BidderError;
-import org.prebid.server.bidder.model.HttpCall;
 import org.prebid.server.bidder.model.HttpRequest;
 import org.prebid.server.bidder.model.Result;
 import org.prebid.server.bidder.pubmatic.model.request.PubmaticBidderImpExt;
@@ -42,6 +42,7 @@ import org.prebid.server.util.HttpUtil;
 
 import java.math.BigDecimal;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
@@ -56,6 +57,9 @@ public class PubmaticBidder implements Bidder<BidRequest> {
     private static final String IMP_EXT_AD_UNIT_KEY = "dfp_ad_unit_code";
     private static final String AD_SERVER_GAM = "gam";
     private static final String PREBID = "prebid";
+    private static final String ACAT_EXT_REQUEST = "acat";
+    private static final String WRAPPER_EXT_REQUEST = "wrapper";
+    private static final String BIDDER_NAME = "pubmatic";
 
     private final String endpointUrl;
     private final JacksonMapper mapper;
@@ -72,7 +76,9 @@ public class PubmaticBidder implements Bidder<BidRequest> {
 
         String publisherId = null;
         PubmaticWrapper wrapper;
+        final List<String> acat;
         try {
+            acat = extractAcat(request);
             wrapper = extractWrapper(request);
         } catch (IllegalArgumentException e) {
             return Result.withError(BidderError.badInput(e.getMessage()));
@@ -100,27 +106,41 @@ public class PubmaticBidder implements Bidder<BidRequest> {
             return Result.withErrors(errors);
         }
 
-        final BidRequest modifiedBidRequest = modifyBidRequest(request, validImps, publisherId, wrapper);
+        final BidRequest modifiedBidRequest = modifyBidRequest(request, validImps, publisherId, wrapper, acat);
         return Result.of(Collections.singletonList(makeHttpRequest(modifiedBidRequest)), errors);
     }
 
-    private PubmaticWrapper extractWrapper(BidRequest request) {
-        final ExtRequest extRequest = request.getExt();
-        final ExtRequestPrebid extRequestPrebid = extRequest != null ? extRequest.getPrebid() : null;
-        final ObjectNode bidderParams = extRequestPrebid != null
-                ? extRequestPrebid.getBidderparams()
+    private List<String> extractAcat(BidRequest request) {
+        final JsonNode bidderParams = getExtRequestPrebidBidderparams(request);
+        final JsonNode acatNode = bidderParams != null ? bidderParams.get(ACAT_EXT_REQUEST) : null;
+
+        return acatNode != null && acatNode.isArray()
+                ? Arrays.stream(mapper.mapper().convertValue(acatNode, String[].class))
+                .map(StringUtils::stripToEmpty)
+                .toList()
                 : null;
-        final JsonNode wrapperNode = bidderParams != null ? bidderParams.get("wrapper") : null;
+    }
+
+    private PubmaticWrapper extractWrapper(BidRequest request) {
+        final JsonNode pubmatic = getExtRequestPrebidBidderparams(request);
+        final JsonNode wrapperNode = pubmatic != null ? pubmatic.get(WRAPPER_EXT_REQUEST) : null;
 
         return wrapperNode != null && wrapperNode.isObject()
                 ? mapper.mapper().convertValue(wrapperNode, PubmaticWrapper.class)
                 : null;
     }
 
+    private static JsonNode getExtRequestPrebidBidderparams(BidRequest request) {
+        final ExtRequest extRequest = request.getExt();
+        final ExtRequestPrebid extRequestPrebid = extRequest != null ? extRequest.getPrebid() : null;
+        final ObjectNode bidderParams = extRequestPrebid != null ? extRequestPrebid.getBidderparams() : null;
+        return bidderParams != null ? bidderParams.get(BIDDER_NAME) : null;
+    }
+
     private static void validateMediaType(Imp imp) {
         if (imp.getBanner() == null && imp.getVideo() == null) {
-            throw new PreBidException(String.format("Invalid MediaType. PubMatic only supports "
-                    + "Banner and Video. Ignoring ImpID=%s", imp.getId()));
+            throw new PreBidException(
+                    "Invalid MediaType. PubMatic only supports Banner and Video. Ignoring ImpID=" + imp.getId());
         }
     }
 
@@ -199,14 +219,14 @@ public class PubmaticBidder implements Bidder<BidRequest> {
         if (adSlotParams.length != 2
                 || StringUtils.isEmpty(adSlotParams[0].trim())
                 || StringUtils.isEmpty(adSlotParams[1].trim())) {
-            throw new PreBidException(String.format("Invalid adSlot '%s'", trimmedAdSlot));
+            throw new PreBidException("Invalid adSlot '%s'".formatted(trimmedAdSlot));
         }
 
         impBuilder.tagid(adSlotParams[0]);
 
         final String[] adSize = adSlotParams[1].toLowerCase().split("x");
         if (adSize.length != 2) {
-            throw new PreBidException(String.format("Invalid size provided in adSlot '%s'", trimmedAdSlot));
+            throw new PreBidException("Invalid size provided in adSlot '%s'".formatted(trimmedAdSlot));
         }
 
         final Integer width = parseAdSizeParam(adSize[0], "width", adSlot);
@@ -220,7 +240,7 @@ public class PubmaticBidder implements Bidder<BidRequest> {
         try {
             return Integer.parseInt(number.trim());
         } catch (NumberFormatException e) {
-            throw new PreBidException(String.format("Invalid %s provided in adSlot '%s'", paramName, adSlot));
+            throw new PreBidException("Invalid %s provided in adSlot '%s'".formatted(paramName, adSlot));
         }
     }
 
@@ -299,25 +319,29 @@ public class PubmaticBidder implements Bidder<BidRequest> {
     private BidRequest modifyBidRequest(BidRequest request,
                                         List<Imp> imps,
                                         String publisherId,
-                                        PubmaticWrapper wrapper) {
+                                        PubmaticWrapper wrapper,
+                                        List<String> acat) {
 
         return request.toBuilder()
                 .imp(imps)
                 .app(modifyApp(request.getApp(), publisherId))
                 .site(modifySite(request.getSite(), publisherId))
-                .ext(resolveRequestExt(request, wrapper))
+                .ext(modifyExtRequest(request.getExt(), wrapper, acat))
                 .build();
     }
 
-    private ExtRequest resolveRequestExt(BidRequest request, PubmaticWrapper wrapper) {
-        if (wrapper == null) {
-            return request.getExt();
+    private ExtRequest modifyExtRequest(ExtRequest extRequest, PubmaticWrapper wrapper, List<String> acat) {
+        final ObjectNode extNode = mapper.mapper().createObjectNode();
+
+        if (wrapper != null) {
+            extNode.set(WRAPPER_EXT_REQUEST, mapper.mapper().valueToTree(wrapper));
         }
 
-        final ObjectNode extNode = mapper.mapper().createObjectNode()
-                .set("wrapper", mapper.mapper().valueToTree(wrapper));
+        if (CollectionUtils.isNotEmpty(acat)) {
+            extNode.set(ACAT_EXT_REQUEST, mapper.mapper().valueToTree(acat));
+        }
 
-        return mapper.fillExtension(ExtRequest.empty(), extNode);
+        return extNode.isEmpty() ? extRequest : mapper.fillExtension(ExtRequest.empty(), extNode);
     }
 
     private static Site modifySite(Site site, String publisherId) {
@@ -343,7 +367,7 @@ public class PubmaticBidder implements Bidder<BidRequest> {
     }
 
     @Override
-    public final Result<List<BidderBid>> makeBids(HttpCall<BidRequest> httpCall, BidRequest bidRequest) {
+    public final Result<List<BidderBid>> makeBids(BidderCall<BidRequest> httpCall, BidRequest bidRequest) {
         try {
             final BidResponse bidResponse = mapper.decodeValue(httpCall.getResponse().getBody(), BidResponse.class);
             return Result.of(extractBids(bidResponse), Collections.emptyList());
@@ -365,7 +389,7 @@ public class PubmaticBidder implements Bidder<BidRequest> {
                 .filter(Objects::nonNull)
                 .flatMap(Collection::stream)
                 .map(bid -> resolveBidderBid(bid, bidResponse.getCur()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private BidderBid resolveBidderBid(Bid bid, String currency) {
@@ -399,14 +423,11 @@ public class PubmaticBidder implements Bidder<BidRequest> {
                 ? ObjectUtils.defaultIfNull(bidExt.getBidType(), 0)
                 : 0;
 
-        switch (bidType) {
-            case 1:
-                return BidType.video;
-            case 2:
-                return BidType.xNative;
-            default:
-                return BidType.banner;
-        }
+        return switch (bidType) {
+            case 1 -> BidType.video;
+            case 2 -> BidType.xNative;
+            default -> BidType.banner;
+        };
     }
 
     private static Integer getDuration(PubmaticBidExt bidExt) {
