@@ -13,8 +13,8 @@ import org.apache.commons.lang3.StringUtils;
 import org.apache.http.client.utils.URIBuilder;
 import org.prebid.server.bidder.Bidder;
 import org.prebid.server.bidder.model.BidderBid;
+import org.prebid.server.bidder.model.BidderCall;
 import org.prebid.server.bidder.model.BidderError;
-import org.prebid.server.bidder.model.HttpCall;
 import org.prebid.server.bidder.model.HttpRequest;
 import org.prebid.server.bidder.model.Result;
 import org.prebid.server.exception.PreBidException;
@@ -32,7 +32,6 @@ import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 public class SmartadserverBidder implements Bidder<BidRequest> {
 
@@ -92,10 +91,10 @@ public class SmartadserverBidder implements Bidder<BidRequest> {
         try {
             uri = new URI(endpointUrl);
         } catch (URISyntaxException e) {
-            throw new PreBidException(String.format("Malformed URL: %s.", endpointUrl));
+            throw new PreBidException("Malformed URL: %s.".formatted(endpointUrl));
         }
         return new URIBuilder(uri)
-                .setPath(String.format("%s/api/bid", StringUtils.removeEnd(uri.getPath(), "/")))
+                .setPath(StringUtils.removeEnd(uri.getPath(), "/") + "/api/bid")
                 .addParameter("callerId", "5")
                 .toString();
     }
@@ -116,7 +115,7 @@ public class SmartadserverBidder implements Bidder<BidRequest> {
     }
 
     @Override
-    public Result<List<BidderBid>> makeBids(HttpCall<BidRequest> httpCall, BidRequest bidRequest) {
+    public Result<List<BidderBid>> makeBids(BidderCall<BidRequest> httpCall, BidRequest bidRequest) {
         try {
             final BidResponse bidResponse = mapper.decodeValue(httpCall.getResponse().getBody(), BidResponse.class);
             return extractBids(httpCall.getRequest().getPayload(), bidResponse);
@@ -136,7 +135,7 @@ public class SmartadserverBidder implements Bidder<BidRequest> {
                 .filter(Objects::nonNull)
                 .flatMap(Collection::stream)
                 .map(bid -> BidderBid.of(bid, getBidType(bid.getImpid(), bidRequest.getImp()), bidResponse.getCur()))
-                .collect(Collectors.toList());
+                .toList();
         return Result.of(bidderBids, errors);
     }
 
