@@ -16,8 +16,8 @@ import org.apache.commons.collections4.CollectionUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.prebid.server.bidder.Bidder;
 import org.prebid.server.bidder.model.BidderBid;
+import org.prebid.server.bidder.model.BidderCall;
 import org.prebid.server.bidder.model.BidderError;
-import org.prebid.server.bidder.model.HttpCall;
 import org.prebid.server.bidder.model.HttpRequest;
 import org.prebid.server.bidder.model.Result;
 import org.prebid.server.bidder.telaria.model.TelariaRequestExt;
@@ -34,7 +34,6 @@ import org.prebid.server.util.HttpUtil;
 import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 public class TelariaBidder implements Bidder<BidRequest> {
@@ -60,8 +59,8 @@ public class TelariaBidder implements Bidder<BidRequest> {
         }
 
         final String publisherId = getPublisherId(bidRequest);
-        String seatCode = null;
-        ExtImpTelaria extImp = null;
+        String seatCode;
+        ExtImpTelaria extImp;
         Imp modifyImp = bidRequest.getImp().get(0);
 
         try {
@@ -177,7 +176,7 @@ public class TelariaBidder implements Bidder<BidRequest> {
     }
 
     @Override
-    public Result<List<BidderBid>> makeBids(HttpCall<BidRequest> httpCall, BidRequest bidRequest) {
+    public Result<List<BidderBid>> makeBids(BidderCall<BidRequest> httpCall, BidRequest bidRequest) {
         try {
             final BidResponse bidResponse = mapper.decodeValue(httpCall.getResponse().getBody(), BidResponse.class);
             return Result.withValues(extractBids(bidResponse, bidRequest));
@@ -206,7 +205,7 @@ public class TelariaBidder implements Bidder<BidRequest> {
                 .filter(i -> bids.get(i) != null)
                 .filter(i -> i < imps.size())
                 .mapToObj(i -> makeBidderBid(bids.get(i), bidResponse, imps.get(i)))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private static BidderBid makeBidderBid(Bid bid, BidResponse bidResponse, Imp imp) {
