@@ -1,13 +1,17 @@
 package org.prebid.server.bidder.yahoossp;
 
 import com.fasterxml.jackson.core.type.TypeReference;
+import com.fasterxml.jackson.databind.node.ArrayNode;
+import com.fasterxml.jackson.databind.node.IntNode;
 import com.fasterxml.jackson.databind.node.ObjectNode;
+import com.fasterxml.jackson.databind.node.TextNode;
 import com.iab.openrtb.request.App;
 import com.iab.openrtb.request.Banner;
 import com.iab.openrtb.request.BidRequest;
 import com.iab.openrtb.request.Device;
 import com.iab.openrtb.request.Format;
 import com.iab.openrtb.request.Imp;
+import com.iab.openrtb.request.Regs;
 import com.iab.openrtb.request.Site;
 import com.iab.openrtb.response.Bid;
 import com.iab.openrtb.response.BidResponse;
@@ -16,16 +20,20 @@ import io.vertx.core.MultiMap;
 import io.vertx.core.http.HttpMethod;
 import org.apache.commons.collections4.CollectionUtils;
 import org.apache.commons.lang3.StringUtils;
+import org.prebid.server.auction.versionconverter.BidRequestOrtbVersionConversionManager;
+import org.prebid.server.auction.versionconverter.OrtbVersion;
 import org.prebid.server.bidder.Bidder;
 import org.prebid.server.bidder.model.BidderBid;
+import org.prebid.server.bidder.model.BidderCall;
 import org.prebid.server.bidder.model.BidderError;
-import org.prebid.server.bidder.model.HttpCall;
 import org.prebid.server.bidder.model.HttpRequest;
 import org.prebid.server.bidder.model.Result;
 import org.prebid.server.exception.PreBidException;
 import org.prebid.server.json.DecodeException;
 import org.prebid.server.json.JacksonMapper;
 import org.prebid.server.proto.openrtb.ext.ExtPrebid;
+import org.prebid.server.proto.openrtb.ext.FlexibleExtension;
+import org.prebid.server.proto.openrtb.ext.request.ExtRegs;
 import org.prebid.server.proto.openrtb.ext.request.yahoossp.ExtImpYahooSSP;
 import org.prebid.server.proto.openrtb.ext.response.BidType;
 import org.prebid.server.util.HttpUtil;
@@ -35,7 +43,7 @@ import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
+import java.util.Optional;
 
 public class YahooSSPBidder implements Bidder<BidRequest> {
 
@@ -44,11 +52,15 @@ public class YahooSSPBidder implements Bidder<BidRequest> {
             };
 
     private final String endpointUrl;
+    private final BidRequestOrtbVersionConversionManager conversionManager;
     private final JacksonMapper mapper;
 
-    public YahooSSPBidder(String endpointUrl, JacksonMapper mapper) {
+    public YahooSSPBidder(String endpointUrl,
+                          BidRequestOrtbVersionConversionManager conversionManager,
+                          JacksonMapper mapper) {
         this.endpointUrl = HttpUtil.validateUrl(Objects.requireNonNull(endpointUrl));
         this.mapper = Objects.requireNonNull(mapper);
+        this.conversionManager = Objects.requireNonNull(conversionManager);
     }
 
     @Override
@@ -56,12 +68,16 @@ public class YahooSSPBidder implements Bidder<BidRequest> {
         final List<HttpRequest<BidRequest>> bidRequests = new ArrayList<>();
         final List<BidderError> errors = new ArrayList<>();
 
-        final List<Imp> impList = bidRequest.getImp();
+        final Regs regs = bidRequest.getRegs();
+        final BidRequest bidRequestOpenRtb25 = this.conversionManager.convertFromAuctionSupportedVersion(bidRequest,
+                OrtbVersion.ORTB_2_5);
+
+        final List<Imp> impList = bidRequestOpenRtb25.getImp();
         for (int i = 0; i < impList.size(); i++) {
             try {
                 final Imp imp = impList.get(i);
                 final ExtImpYahooSSP extImpYahooSSP = parseAndValidateImpExt(imp.getExt(), i);
-                final BidRequest modifiedRequest = modifyRequest(bidRequest, imp, extImpYahooSSP);
+                final BidRequest modifiedRequest = modifyRequest(bidRequestOpenRtb25, imp, extImpYahooSSP, regs);
                 bidRequests.add(makeHttpRequest(modifiedRequest));
             } catch (PreBidException e) {
                 errors.add(BidderError.badInput(e.getMessage()));
@@ -76,31 +92,36 @@ public class YahooSSPBidder implements Bidder<BidRequest> {
         try {
             extImpYahooSSP = mapper.mapper().convertValue(impExtNode, YAHOOSSP_EXT_TYPE_REFERENCE).getBidder();
         } catch (IllegalArgumentException e) {
-            throw new PreBidException(String.format("imp #%s: %s", index, e.getMessage()));
+            throw new PreBidException("imp #%s: %s".formatted(index, e.getMessage()));
         }
 
         final String dcn = extImpYahooSSP.getDcn();
         if (StringUtils.isBlank(dcn)) {
-            throw new PreBidException(String.format("imp #%s: missing param dcn", index));
+            throw new PreBidException("imp #%s: missing param dcn".formatted(index));
         }
 
         final String pos = extImpYahooSSP.getPos();
         if (StringUtils.isBlank(pos)) {
-            throw new PreBidException(String.format("imp #%s: missing param pos", index));
+            throw new PreBidException("imp #%s: missing param pos".formatted(index));
         }
 
         return extImpYahooSSP;
     }
 
-    private static BidRequest modifyRequest(BidRequest request, Imp imp, ExtImpYahooSSP extImpYahooSSP) {
+    private BidRequest modifyRequest(BidRequest request, Imp imp, ExtImpYahooSSP extImpYahooSSP, Regs regs) {
         final BidRequest.BidRequestBuilder requestBuilder = request.toBuilder();
 
         final Site site = request.getSite();
         final App app = request.getApp();
+
         if (site != null) {
             requestBuilder.site(site.toBuilder().id(extImpYahooSSP.getDcn()).build());
         } else if (app != null) {
             requestBuilder.app(app.toBuilder().id(extImpYahooSSP.getDcn()).build());
+        }
+
+        if (regs != null) {
+            requestBuilder.regs(modifyRegs(regs));
         }
 
         return requestBuilder
@@ -122,8 +143,7 @@ public class YahooSSPBidder implements Bidder<BidRequest> {
         final boolean hasBannerWidthAndHeight = bannerWidth != null && bannerHeight != null;
 
         if (hasBannerWidthAndHeight && (bannerWidth == 0 || bannerHeight == 0)) {
-            throw new PreBidException(String.format(
-                    "Invalid sizes provided for Banner %sx%s", bannerWidth, bannerHeight));
+            throw new PreBidException("Invalid sizes provided for Banner %sx%s".formatted(bannerWidth, bannerHeight));
         }
     }
 
@@ -144,6 +164,46 @@ public class YahooSSPBidder implements Bidder<BidRequest> {
                 .w(firstFormat.getW())
                 .h(firstFormat.getH())
                 .build();
+    }
+
+    private Regs modifyRegs(Regs regs) {
+        final ExtRegs extRegs = resolveExtRegs(regs);
+
+        return Regs.builder().ext(extRegs).build();
+    }
+
+    private ExtRegs resolveExtRegs(Regs regs) {
+        final Integer gdpr = resolveGdpr(regs);
+        final String usPrivacy = resolveUsPrivacy(regs);
+        final String gpp = regs.getGpp();
+        final List<Integer> gppSid = regs.getGppSid();
+
+        final ExtRegs extRegs = ExtRegs.of(gdpr, usPrivacy);
+        extRegs.addProperty("gpp", TextNode.valueOf(gpp));
+        if (!CollectionUtils.isEmpty(gppSid)) {
+            final ArrayNode gppArrayNode = mapper.mapper().createArrayNode();
+            gppSid.forEach(gppArrayNode::add);
+            extRegs.addProperty("gpp_sid", gppArrayNode);
+        }
+        if (regs.getCoppa() != null) {
+            extRegs.addProperty("coppa", IntNode.valueOf(regs.getCoppa()));
+        }
+
+        Optional.ofNullable(regs.getExt())
+                .map(FlexibleExtension::getProperties)
+                .ifPresent(extRegs::addProperties);
+
+        return extRegs;
+    }
+
+    private static Integer resolveGdpr(Regs regs) {
+        return regs.getGdpr() != null ? regs.getGdpr()
+                : (regs.getExt() != null ? regs.getExt().getGdpr() : null);
+    }
+
+    private static String resolveUsPrivacy(Regs regs) {
+        return regs.getUsPrivacy() != null ? regs.getUsPrivacy()
+                : (regs.getExt() != null ? regs.getExt().getUsPrivacy() : null);
     }
 
     private HttpRequest<BidRequest> makeHttpRequest(BidRequest outgoingRequest) {
@@ -167,7 +227,7 @@ public class YahooSSPBidder implements Bidder<BidRequest> {
     }
 
     @Override
-    public Result<List<BidderBid>> makeBids(HttpCall<BidRequest> httpCall, BidRequest bidRequest) {
+    public Result<List<BidderBid>> makeBids(BidderCall<BidRequest> httpCall, BidRequest bidRequest) {
         try {
             final BidResponse bidResponse = mapper.decodeValue(httpCall.getResponse().getBody(), BidResponse.class);
             return Result.of(extractBids(bidResponse, httpCall.getRequest().getPayload()), Collections.emptyList());
@@ -197,7 +257,7 @@ public class YahooSSPBidder implements Bidder<BidRequest> {
                 .filter(Objects::nonNull)
                 .map(bid -> makeBidderBid(bid, imps, bidResponse.getCur()))
                 .filter(Objects::nonNull)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private static BidderBid makeBidderBid(Bid bid, List<Imp> imps, String currency) {
@@ -218,6 +278,6 @@ public class YahooSSPBidder implements Bidder<BidRequest> {
                 return null;
             }
         }
-        throw new PreBidException(String.format("Unknown ad unit code '%s'", bid.getImpid()));
+        throw new PreBidException("Unknown ad unit code '%s'".formatted(bid.getImpid()));
     }
 }
