@@ -11,7 +11,6 @@ import org.prebid.server.privacy.gdpr.vendorlist.proto.PurposeCode;
 
 import java.util.Collection;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class PurposeTwoBasicEnforcePurposeStrategy extends BasicEnforcePurposeStrategy {
 
@@ -30,7 +29,7 @@ public class PurposeTwoBasicEnforcePurposeStrategy extends BasicEnforcePurposeSt
                 .filter(vendorPermission -> vendorPermission.getVendorId() != null)
                 .filter(vendorPermission -> isAllowedBySimpleConsentOrPurposeLI(purpose,
                         vendorPermission.getVendorId(), isEnforceVendors, vendorConsent))
-                .collect(Collectors.toList());
+                .toList();
 
         return CollectionUtils.union(allowedVendorPermissions, toVendorPermissions(excludedVendors));
     }
