@@ -15,7 +15,6 @@ import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import static java.util.Collections.singletonList;
 import static org.assertj.core.api.Assertions.assertThat;
@@ -333,7 +332,7 @@ public class GridKeywordsProcessorTest extends VertxTest {
                         "keywords",
                         Arrays.stream(keywords)
                                 .map(keyword -> KeywordSegment.of("keywords", keyword))
-                                .collect(Collectors.toList())));
+                                .toList()));
     }
 
     private static ObjectNode givenPublisherSegmentNode(String name, String value) {
